--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "LICENSE.md",
     "README.md"
   ],
-  "main": "dist/index.umd.js",
+  "main": "dist/index.esm.js",
   "module": "dist/index.esm.js",
   "types": "types/index.d.ts",
   "keywords": [
